# residuelisp

./: .gitignore  LICENSE  README.md  cleanup.ipynb  lisp.ipynb  lisp.py  pre_commit.sh  pyproject.toml  residue.ipynb  resonator.ipynb
examples/: README.md  paradox.scm
src/: main.py
src/language/: __init__.py  encoding.py  interpret.py  interpreter.py
src/perf/: __init__.py  rhc_versus_cons_encoding.py
src/syntax/: parser.py
src/tests/: test_encoding.py  test_fhrr.py  test_hrr.py  test_interpret.py  test_parser.py  test_rhc.py  test_syntax.py  test_vsa.py
src/vsa/: __init__.py  common.py  fhrr.py  hrr.py  rhc.py  vsa.py
vsa/: fhrr.py  rhc.py  utils.py  vocabulary.py
