[project]
name = "residuelisp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "more-itertools>=10.6.0",
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pdoc>=15.0.3",
    "pytest>=8.3.5",
]
